# thnk

./: .gitignore  common_dependencies.rb  package.json
bubble-auth/: README.md  bash.sh  fly.toml  history.json
bubble-auth/auth_app/: context_processors.py  tests.py  urls.py
bubble-auth/bubble_auth/: wsgi.py
bubble-auth/docs/: readme.md
bubble-auth/k8s/: ingress.yaml  secret.yaml  service.yaml
bubble-ctx/docs/: doc.md
bubble-fin/docs/: doc.md
bubble-motor/: api.py  auth.py  doc.md  example_openai_spec.py  loops.py  main.py  pyproject.toml  requirements.txt  server.py  utils.py
bubble-motor/docs/: doc.md
bubble-ocr/docs/: doc.md
bubble-qr/docs/: doc.md
bubble-socket/bubble_socket/: .gitignore  Gemfile  README.md  package.json
bubble-socket/docs/: doc.md
bubble-spider/docs/: doc.md
bubble-ss/docs/: doc.md
bubble-subs/docs/: doc.md
experiments/auto-label/: README.md  main.go
gems/bubbleQR/: setup.sh
gems/calypso/: Gemfile  README.md  calypso.gemspec
gems/envo/: CHANGELOG.md  Gemfile  README.md  envo-0.1.3.gem  envo.gemspec
projects/bubble/bubble-auth/: Dockerfile  manage.py  pyproject.toml
projects/bubble/bubble-auth/auth_app/: authentication.py  forms.py  serializers.py  views.py
projects/bubble/bubble-auth/auth_app/providers/: base.py  printful.py
projects/bubble/bubble-auth/bubble_auth/: settings.py  urls.py
projects/bubble/bubble-auth/k8s/: configmap.yaml  deployment.yaml
projects/bubble/bubble-auth/supabase/: config.toml
projects/bubble/bubble-auth/templates/auth_app/: password_reset.html  profile.html  register.html
(+491 files in other folders)
